<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.profile.ProfileActivity">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/topAppBar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/colorPrimary"
      app:menu="@menu/profile_menu"
      app:navigationIcon="@drawable/baseline_keyboard_backspace_24"
      app:navigationIconTint="@color/white"
      app:title="@string/profile"
      app:titleTextColor="@color/white" />
  </com.google.android.material.appbar.AppBarLayout>

  <ImageView
    android:id="@+id/profile_photo"
    android:layout_width="187dp"
    android:layout_height="187dp"
    android:layout_marginTop="64dp"
    android:scaleType="centerCrop"
    android:visibility="gone"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/appBarLayout"
    tools:srcCompat="@tools:sample/avatars" />

  <TextView
    android:id="@+id/tv_label_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="32dp"
    android:text="@string/name"
    android:textSize="16sp"
    android:textStyle="bold"
    android:visibility="gone"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/profile_photo" />

  <TextView
    android:id="@+id/tv_name_profile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="32dp"
    android:textSize="16sp"
    android:visibility="gone"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_label_name"
    tools:text="Arsan" />

  <TextView
    android:id="@+id/tv_label_email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="32dp"
    android:text="@string/email"
    android:textSize="16sp"
    android:textStyle="bold"
    android:visibility="gone"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_name_profile" />

  <TextView
    android:id="@+id/tv_email_profile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="32dp"
    android:textSize="16sp"
    android:visibility="gone"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_label_email"
    tools:text="Arsan@gmail.com" />

  <TextView
    android:id="@+id/tv_login_command"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:text="@string/command_to_log_in_profile"
    android:textAlignment="center"
    android:textSize="16sp"
    android:visibility="visible"
    app:layout_constraintBottom_toTopOf="@+id/button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/button"
    style="@style/ButtonStyleFilled"
    android:layout_width="88dp"
    android:layout_height="48dp"
    android:layout_marginTop="8dp"
    android:text="@string/login"
    android:visibility="visible"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline_vertical_center" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_vertical_center"
    android:layout_width="wrap_content"
    android:layout_height="64dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintGuide_percent="0.5"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>