<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:id="@+id/recomendation_activity"
  android:layout_height="match_parent"
  android:layout_gravity="center_vertical"
  tools:context=".ui.recomendation.RecomendationActivity">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/topAppBar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/colorPrimary"
      app:navigationIcon="@drawable/baseline_keyboard_backspace_24"
      app:navigationIconTint="@color/white"
      app:title="@string/recomendation_heading"
      app:titleTextColor="@color/white" />
  </com.google.android.material.appbar.AppBarLayout>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rv_stories"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="16dp"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
    app:layout_constraintVertical_bias="0.0"
    tools:listitem="@layout/recomendation_item" />

  <TextView
    android:id="@+id/tv_login_command"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:visibility="gone"
    android:text="@string/login_command"
    android:textAlignment="center"
    android:textSize="16sp"
    app:layout_constraintBottom_toTopOf="@+id/guideline_vertical_center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/btn_to_login"
    style="@style/ButtonStyleFilled"
    android:layout_width="88dp"
    android:layout_height="48dp"
    android:visibility="gone"
    android:layout_marginTop="8dp"
    android:text="@string/login"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline_vertical_center" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_vertical_center"
    android:layout_width="wrap_content"
    android:layout_height="64dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintGuide_percent="0.5"
    app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>